tests/errors/semantic/blocking/REMOVE_SET_KEYERROR_TYPE_1.py
# Expecting an argument of the same type as the elements of the set
# pylint: disable=missing-function-docstring, missing-module-docstring

se = {1, 2, 3}

se.remove(range(3,4))
